Velcro test First SandBox/src/objects/Account_KPI_data_snapshot__c.object
<CustomObject>
    <description>Account KPI data snapshots</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account KPI data snapshots</relationshipLabel>
        <relationshipName>Account_KPI_data_snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Bookings__c</fullName>
        <label>Actual MTD Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Gross_Sales__c</fullName>
        <label>Actual_MTD_Gross_Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_MTD_Standard_Margin__c</fullName>
        <label>Actual MTD Standard Margin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Gross_Sales__c</fullName>
        <label>Actual YTD Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Budget_MTD__c</fullName>
        <label>Gross Budget MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Budget_YTD__c</fullName>
        <label>Gross Budget YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Budget__c</fullName>
        <description>Gross_Budget</description>
        <label>Gross_Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Orders__c</fullName>
        <label>Open Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_MTD_Adjusted_Gross_Sales__c</fullName>
        <label>PY MTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_YTD_Adjusted_Gross_sales__c</fullName>
        <description>PY YTD Adjusted Gross sales</description>
        <label>PY YTD Adjusted Gross sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Account KPI data snapshot</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account KPI data snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account KPI data snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>